<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/btnVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onVideoButton"
            android:text="@string/video" />
        <Spinner
            android:id="@+id/spDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnVideo"
            android:entries="@array/distances_array" />

        <!--  Spinner
            android:id="@+id/spPoolLen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/spDistance"
            android:entries="@array/poollen_array" / -->

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="onStopButtonClick"
            android:text="@string/stop" />

<Spinner
                android:id="@+id/spSwimtyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spDistance"
                android:entries="@array/swimming_style" />


                <AutoCompleteTextView 
                android:id="@+id/txtName"
                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/spSwimtyle"
                android:layout_alignTop="@id/spSwimtyle"
                 android:completionThreshold="1" 
                />
<!--   Spinner
                android:id="@+id/spName"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/spSwimtyle"
                android:layout_alignTop="@id/spSwimtyle"
                android:onLongClick="LongClickName"
                / -->

        <!-- android:src="@android:drawable/ic_menu_moreoverflow_normal_holo_light" -->
        
        <Button
            android:id="@+id/myButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spSwimtyle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/btnSpace"
            android:onClick="onButtonClick"
            android:text="@string/start" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/myButton"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onResultClick"
            android:text="00:00:00"
            android:textSize="@android:dimen/app_icon_size" />

        
        
        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/txtResult"
          
            android:scrollbars="vertical" >

            <TableLayout
                android:id="@+id/myTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TableRow>
            </TableLayout>
        </ScrollView>
        

    </RelativeLayout>

</FrameLayout>